// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Money — snapshot (dois temas) saldo negativo em display: claro 1`] = `
<Text
  accessibilityLabel="menos 1234567 reais e 89 centavos"
  accessible={true}
  adjustsFontSizeToFit={true}
  maxFontSizeMultiplier={1.3}
  minimumFontScale={0.6}
  numberOfLines={1}
  style={
    [
      {
        "fontFamily": "Inter-Bold",
        "fontSize": 40,
        "lineHeight": 44,
      },
      {
        "color": "#111113",
      },
      {},
      {
        "fontVariant": [
          "tabular-nums",
        ],
      },
    ]
  }
>
  −R$ 1.234.567,
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Bold",
          "fontSize": 40,
          "lineHeight": 44,
        },
        {
          "color": "#5F5F6A",
        },
        {},
        {
          "fontVariant": [
            "tabular-nums",
          ],
        },
      ]
    }
  >
    89
  </Text>
</Text>
`;

exports[`Money — snapshot (dois temas) saldo negativo em display: escuro 1`] = `
<Text
  accessibilityLabel="menos 1234567 reais e 89 centavos"
  accessible={true}
  adjustsFontSizeToFit={true}
  maxFontSizeMultiplier={1.3}
  minimumFontScale={0.6}
  numberOfLines={1}
  style={
    [
      {
        "fontFamily": "Inter-Bold",
        "fontSize": 40,
        "lineHeight": 44,
      },
      {
        "color": "#F2F2F3",
      },
      {},
      {
        "fontVariant": [
          "tabular-nums",
        ],
      },
    ]
  }
>
  −R$ 1.234.567,
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Bold",
          "fontSize": 40,
          "lineHeight": 44,
        },
        {
          "color": "#9B9BA6",
        },
        {},
        {
          "fontVariant": [
            "tabular-nums",
          ],
        },
      ]
    }
  >
    89
  </Text>
</Text>
`;
